Fix: In-page links Fixed jumping to the right spot by changing margin with padding

--- a/style.css
+++ b/style.css
@@ -179,10 +179,10 @@ html {
 
 #about{
     border: 2px solid red;
-    margin: 100px 0 0 0;
+    padding: 100px 20px 0 20px;
     width: 100%;
     max-width: 1100px;
-    padding: 0 20px;
+    /* padding: 0 20px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -215,7 +215,7 @@ html {
 /* workflow */
 
 #workflow{
-    margin: 150px 0 0 0;
+    padding: 150px 0 0 0;
     width: 100vw;
     border: 2px solid red;
     display: flex;
@@ -235,7 +235,7 @@ html {
 
 /* timeline */
 .workflow-timeline{
-  padding: 5em 0;
+  padding: 5em 0 0 0;
   border: 2px solid red;
   width: 85vw;
 }
@@ -338,7 +338,7 @@ html {
 #pricing{
   /* margin: 100px 0 0 0; */
   width: 100%;
-  padding: 0 20px;
+  padding: 5em 20px 0 20px;
   border: 2px solid red;
 }
 .pricing-heading{
@@ -398,12 +398,12 @@ html {
 
 #contact{
   width: 100%;
-  margin: 150px 0 0 0;
+  padding: 150px 20px 0 20px;
   border: 2px solid red;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 20px;
+  /* padding: 0 20px; */
 }
 
 .contact-heading{
@@ -627,13 +627,16 @@ footer{
 /* hamburger */
 
 @media (max-width: 650px) {
+  #navbar{
+    height: 70px;
+  }
   .nav-links {
     display: flex;
     flex-direction: column;
     width: fit-content;
     height: fit-content;
     position: absolute;
-    top: 95px;
+    top: 80px;
     right: 10px;
     border-radius: 5px;
     background-color: white;
